--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background: 	#E8E8EE;
+  color: #333333;
+
 }
 
 code {
@@ -13,7 +15,177 @@ code {
     monospace;
 }
 
+.login {
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background: url('./cool-background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.login h1 {
+  font-size: 60px;
+  letter-spacing: 1.5px;
+  /* text-transform: uppercase; */
+}
+
+.login p {
+  max-width: 300px;
+  margin: 10px auto;
+  font-size: 20px;
+}
+
+.fa-github {
+  font-size: 40px;
+}
+
+.vh {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+input {
+  /* padding: 10px 60px; */
+  margin: 10px auto;
+  max-width: 300px;
+  display: block;
+  font-size: 20px;
+  outline: none;
+  border: none;
+}
+
+.user-name {
+  background: rgba(255, 255, 255, 0.4);
+  background: transparent;
+  padding: 10px 0;
+  text-align: center;
+  width: 90%;
+  border-bottom: 1px solid #333333;
+}
+
+
+.form-submit {
+  background: rgb(46, 81, 118);
+  color: white;
+  padding: 10px 60px;
+  font-size: 30px;
+  outline: none;
+  display: block;
+  margin: 30px auto;
+  width: 90%;
+}
+
+.form-submit:hover {
+  cursor: pointer;
+}
+
+.login-wrapper {
+  width: 40%;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.4);
+  padding: 40px 0;
+}
+
+.dashboard {
+  background: url('./cool-background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 20px;
+}
+
+.dashboard-wrapper {
+  width: 40%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.dashboard-wrapper p {
+  padding: 5px;
+  margin: 0;
+  font-size: 18px;
+  color: white;
+}
+
+.dashboard-wrapper h1 {
+  margin: 0;
+  color: white;
+}
+
 .avatar {
   display: block;
+  margin: 0 auto;
   max-width: 80px;
+  border-radius: 50%;
+}
+
+.user-profile {
+  padding-top: 20px;
+}
+
+.user-profile h2 {
+  background: rgb(46, 81, 118);
+  color: white;
+  width: 70%;
+  margin: 0 auto;
+  padding: 10px 0;
+  margin-top: 30px;
+  padding-left: 5px;
+}
+
+.main-list {
+  list-style-type: none;
+  padding: 0;
+  /* border: 1px solid black; */
+  width: 70%;
+  margin: 0 auto;
+}
+
+.main-list li {
+  margin: 10px 0;
+  background: white;
+  padding: 10px 0;
+  padding-left: 5px;
+  /* display: flex; */
+  /* align-items: center; */
+}
+
+.main-list a {
+  text-decoration: none;
+  color:black;
+  font-size: 20px;
+}
+
+.pull-status {
+  border: rgb(113, 175, 149) solid 1.5px;
+  border-radius: 12px;
+  text-transform: lowercase;
+  padding: 5px 8px;
+  display: inline-block;
+  min-width: 85px;
+  text-align: center;
+  margin-right: 5px;
+  font-size: 18px;
+
+}
+
+.pull-status.closed {
+  background: rgb(195, 222, 181);
+}
+
+.merged {
+  width: 15px;
+}
+
+.main-list .base-repo {
+  font-size: 16px;
 }
